samples/_failures_safe/1761794412_f0cd72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_540d8eeb.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_540d8eeb.c:137:83: error: expected ‘;’ at end of input
  137 |         if (geom->vertices[i].y < bounds.min.y) bounds.min.y = geom->vertices[i].y
      |                                                                                   ^
      |                                                                                   ;
./samples/SAFE/__tmp_540d8eeb.c:137:9: error: expected declaration or statement at end of input
  137 |         if (geom->vertices[i].y < bounds.min.y) bounds.min.y = geom->vertices[i].y
      |         ^~
./samples/SAFE/__tmp_540d8eeb.c:137:9: error: expected declaration or statement at end of input
